<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:layout_alignParentTop="true"
		android:background="?attr/colorPrimary"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

	<TextView
		android:id="@+id/footer"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:layout_alignParentBottom="true"
		android:background="@color/scanner_text_background"
		android:gravity="center"
		android:text="@string/mode_youtube_search"
		android:textColor="@color/scanner_text"
		android:textSize="@dimen/scanner_text"/>

	<ImageButton
		android:id="@+id/search_button"
		android:layout_width="wrap_content"
		android:layout_height="?attr/actionBarSize"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_below="@id/toolbar"
		android:background="?attr/selectableItemBackground"
		android:contentDescription="@string/video_go"
		android:onClick="handleClick"
		android:paddingLeft="4dp"
		android:paddingRight="4dp"
		android:src="@drawable/ic_search_red_600_48dp"/>

	<EditText
		android:id="@+id/search_query"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_below="@id/toolbar"
		android:layout_gravity="center_horizontal"
		android:layout_toLeftOf="@id/search_button"
		android:layout_toStartOf="@id/search_button"
		android:hint="@string/video_search"
		android:imeOptions="actionSearch"
		android:inputType="text"
		android:maxLines="1"/>

	<ListView
		android:id="@+id/search_results_list"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@id/footer"
		android:layout_below="@id/search_button"/>

	<ProgressBar
		android:id="@+id/search_results_progress_indicator"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@id/footer"
		android:layout_below="@id/search_button"
		android:layout_centerHorizontal="true"
		android:background="@android:color/transparent"
		android:indeterminate="true"
		android:visibility="gone"/>

</RelativeLayout>
